cloudformation/vpc.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "VPC: public and private subnets in four availability zones, a cloudonaut.io template",
	"Parameters": {
		"ClassB": {
			"Description": "Class B of VPC (10.XXX.0.0/16)",
			"Type": "String",
			"MinLength": "1",
			"MaxLength": "3"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/16"]]},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"InstanceTenancy": "default",
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/16"]]}
				}]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/16"]]}
				}]
			}
		},
		"VPCGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"InternetGatewayId": {"Ref": "InternetGateway"}
			}
		},

		"SubnetAPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "A public"
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetAPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".16.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "A private"
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"SubnetBPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".32.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "B public"
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetBPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".48.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "B private"
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"SubnetCPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["2", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".64.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "C public"
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetCPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["2", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".80.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "C private"
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"SubnetDPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["3", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".96.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "D public"
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetDPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["3", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".112.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "D private"
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},

    "NatGatewayEIP": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NatGateway": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": ["NatGatewayEIP", "AllocationId"]},
				"SubnetId": {"Ref": "SubnetAPublic"}
			}
		},

		"RouteTablePublic": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "Public"
				}]
			}
		},
		"RouteTablePrivate": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "Private"
				}]
			}
		},
		"RouteTableAssociationAPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationAPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPrivate"},
				"RouteTableId": {"Ref": "RouteTablePrivate"}
			}
		},
		"RouteTableAssociationBPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationBPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPrivate"},
				"RouteTableId": {"Ref": "RouteTablePrivate"}
			}
		},
		"RouteTableAssociationCPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetCPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationCPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetCPrivate"},
				"RouteTableId": {"Ref": "RouteTablePrivate"}
			}
		},
		"RouteTableAssociationDPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationDPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPrivate"},
				"RouteTableId": {"Ref": "RouteTablePrivate"}
			}
		},
		"RouteTablePublicInternetRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "VPCGatewayAttachment",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTablePublic"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {"Ref": "InternetGateway"}
			}
		},

		"RouteTablePrivateInternetRoute": {
			"Type": "AWS::EC2::Route",
      "DependsOn": "NatGateway",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTablePrivate"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGateway"}
			}
		},

		"NetworkAclPublic": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "Public"
				}]
			}
		},
		"NetworkAclPrivate": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": "Private"
				}]
			}
		},
		"SubnetNetworkAclAssociationAPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationAPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"SubnetNetworkAclAssociationBPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationBPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"SubnetNetworkAclAssociationCPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetCPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationCPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetCPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"SubnetNetworkAclAssociationDPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationDPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"NetworkAclEntryInPublicAllowAll": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPublic"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"NetworkAclEntryOutPublicAllowAll": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPublic"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"NetworkAclEntryInPrivateAllowVPC": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPrivate"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"NetworkAclEntryOutPrivateAllowVPC": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPrivate"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0"
			}
		}
	},
	"Outputs": {
		"VPC": {
			"Description": "VPC.",
			"Value": {"Ref": "VPC"}
		},
		"SubnetAPublic": {
			"Description": "Subnet A public.",
			"Value": {"Ref": "SubnetAPublic"}
		},
		"SubnetAPrivate": {
			"Description": "Subnet A private.",
			"Value": {"Ref": "SubnetAPrivate"}
		},
		"SubnetBPublic": {
			"Description": "Subnet B public.",
			"Value": {"Ref": "SubnetBPublic"}
		},
		"SubnetBPrivate": {
			"Description": "Subnet B private.",
			"Value": {"Ref": "SubnetBPrivate"}
		},
		"SubnetCPublic": {
			"Description": "Subnet C public.",
			"Value": {"Ref": "SubnetCPublic"}
		},
		"SubnetCPrivate": {
			"Description": "Subnet C private.",
			"Value": {"Ref": "SubnetCPrivate"}
		},
		"SubnetDPublic": {
			"Description": "Subnet D public.",
			"Value": {"Ref": "SubnetDPublic"}
		},
		"SubnetDPrivate": {
			"Description": "Subnet D private.",
			"Value": {"Ref": "SubnetDPrivate"}
		},
		"RouteTablePrivate": {
			"Description": "Route table private.",
			"Value": {"Ref": "RouteTablePrivate"}
		},
		"RouteTablePublic": {
			"Description": "Route table public.",
			"Value": {"Ref": "RouteTablePublic"}
		}
	}
}
